@@ -1149,6 +1149,7 @@ created and by whom, and anything else you may know about it. If this is an imag
 'license' => 'Licensing',
 'nolicense' => 'None selected',
 'licenses' => '-', # Don't duplicate this in translations
+'upload_source_url' => ' (vaild, publicy accessible URL)',
 
 # Image list
 #
