@@ -147,6 +147,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 7044) Introduce "padleft" and "padright" colon functions
 * Pass page title as parameters to "linkshere" and "nolinkshere" and update
   default message text
+* Allows to upload from publicy accessible URL. Set $wgAllowCopyUploads = true ; in LocalSettings.php
 
 == Languages updated ==
 
